@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.119 2005/03/30 00:10:50 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.120 2005/03/30 00:12:52 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Remove /tmp/compile_output.log and /var/log/install.log when install is
   complete. Added code to (hopefully) keep 2nd thread running after install.
-  Patch from zahna for extra arguments to the kernel.
+  Patch from zahna for extra arguments to the kernel. Patch from zahna to add
+  get_eth_info() function.
 
   28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added 'append_log=True' to all spawn() calls using logfile=. Append to log
